--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,22 @@ li{list-style:none}
 
 /* ---- base ---- */
 
+@font-face {
+    font-family: 'pt_sansbold';
+    src: url('../fonts/pt_sans-web-bold-webfont.woff2') format('woff2'),
+         url('../fonts/pt_sans-web-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'pt_sansregular';
+    src: url('pt_sans-web-regular-webfont.woff2') format('woff2'),
+         url('pt_sans-web-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 html,
 body {
 	width: 100%;
@@ -33,6 +49,11 @@ body {
 
 html {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+body {
+	color: white;
+	font-family: 'pt_sansbold';
 }
 
 canvas {
@@ -45,7 +66,7 @@ canvas {
 #particles-js {
 	width: 100%;
 	height: 100%;
-	background-color: #515151;
+	background-color: #242424;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -65,19 +86,18 @@ canvas {
 	margin-top: -100px;
 }
 
-@font-face {
-    font-family: 'pt_sansbold';
-    src: url('../fonts/pt_sans-web-bold-webfont.woff2') format('woff2'),
-         url('../fonts/pt_sans-web-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
-
 #name {
-	color: white;
-	font-family: 'pt_sansbold';
 	font-size: 40px;
 	margin-left: -140px;
 	margin-top: 120px;
 	text-align: center;
+}
+
+#social-icons {
+	margin-top: 250px;
+	margin-left: -314px;
+}
+
+#social-icons a {
+	margin-right: 20px;
 }
