--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
     </mat-card-header>
     <mat-card-content>
       <p>
-        I work as a Full-Stack Developer in the compliance team at
+        I am part of the Compliance Team as a Full-Stack Developer Apprentice at
         <a href="https://www.bred.fr/index.html" target="_blank">BRED Banque Populaire</a>. I study Information Systems Engineering at the
         <a href="http://esipe.u-pec.fr/" target="_blank">École Supérieure d'Ingénieurs de Paris-Est Créteil</a>. I am engaged in
         <a href="https://fac-creteil.fr/" targent="_blank">FAC</a>, the main student society of Université Paris-Est Créteil, as the Head of Entrepreneurship. 🚀
