--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,24 +2,4 @@
   <button mat-button>Evan Suau</button>
 </mat-toolbar>
 
-<div class="container">
-  <mat-card>
-    <mat-card-header fxLayout="column">
-      <div mat-card-avatar class="header-image"></div>
-      <mat-card-title fxLayoutAlign="center">
-        <h1>Evan Suau</h1>
-      </mat-card-title>
-      <mat-card-subtitle fxLayoutAlign="center">
-        <h2>Developer @ BRED Banque Populaire</h2>
-      </mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        I am part of the Compliance Team as a Full-Stack Developer Apprentice at
-        <a href="https://www.bred.fr/index.html" target="_blank">BRED Banque Populaire</a>. I study Information Systems Engineering at the
-        <a href="http://esipe.u-pec.fr/" target="_blank">École Supérieure d'Ingénieurs de Paris-Est Créteil</a>. I am engaged in
-        <a href="https://fac-creteil.fr/" targent="_blank">FAC</a>, the main student society of Université Paris-Est Créteil, as the Head of Entrepreneurship. 🚀
-      </p>
-    </mat-card-content>
-  </mat-card>
-</div>
+<app-bio></app-bio>
