Add app routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,12 @@
 
 <mat-sidenav-container fxLayout="row" fxLayoutAlign="stretch">
   <mat-sidenav mode="side" opened="true" fxLayout="column">
-    <button mat-button color="primary">
+    <button mat-button color="primary" routerLink="">
       <mat-icon>person_outline</mat-icon>
       BIO
     </button>
   </mat-sidenav>
   <mat-sidenav-content>
-    <app-bio></app-bio>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
