--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,8 @@
-mat-sidenav-container {
+.sidenav-container {
   height: 100%;
 }
 
-mat-sidenav {
-  min-width: 200px;
+.sidenav {
+  width: 200px;
+  box-shadow: 3px 0 6px rgba(0,0,0,.24);
 }
