--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,26 @@
-<mat-toolbar>
-  <button mat-button>Evan Suau</button>
-</mat-toolbar>
-
-<mat-sidenav-container fxLayout="row" fxLayoutAlign="stretch">
-  <mat-sidenav mode="side" opened="true" fxLayout="column">
-    <button mat-button color="primary" routerLink="">
-      <mat-icon>person_outline</mat-icon>
-      BIO
-    </button>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport="true"
+    [attr.role]="isHandset ? 'dialog' : 'navigation'"
+    [mode]="(isHandset | async)!.matches ? 'over' : 'side'"
+    [opened]="!(isHandset | async)!.matches">
+    <mat-toolbar color="primary">Evan Suau</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item routerLink="">
+        <mat-icon>person_outline</mat-icon>
+        &nbsp;
+        Bio
+      </a>
+    </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <button type="button" aria-label="Toggle sidenav"
+        mat-icon-button (click)="drawer.toggle()"
+        *ngIf="(isHandset | async)!.matches">
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <span>About me.</span>
+    </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
