--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,16 @@
         &nbsp;
         Bio
       </a>
+      <a mat-list-item routerLink="resume">
+        <mat-icon>description</mat-icon>
+        &nbsp;
+        Resume
+      </a>
+      <a mat-list-item routerLink="contact">
+        <mat-icon>question_answer</mat-icon>
+        &nbsp;
+        Contact
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
