Align icons with text in vertical nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,15 +22,15 @@
     </div>
     <clr-vertical-nav>
       <a clrVerticalNavLink routerLink="" routerLinkActive="active">
-        <clr-icon shape="user"></clr-icon>
+        <clr-icon clrVerticalNavIcon shape="user"></clr-icon>
         Bio
       </a>
       <a clrVerticalNavLink routerLink="">
-        <clr-icon shape="file"></clr-icon>
+        <clr-icon clrVerticalNavIcon shape="file"></clr-icon>
         Resume
       </a>
       <a clrVerticalNavLink routerLink="">
-        <clr-icon shape="talk-bubbles"></clr-icon>
+        <clr-icon clrVerticalNavIcon shape="talk-bubbles"></clr-icon>
         Contact
       </a>
     </clr-vertical-nav>
