--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
     <div class="content-area">
       <router-outlet></router-outlet>
     </div>
-    <clr-vertical-nav [clr-nav-level]="2">
+    <clr-vertical-nav [clr-nav-level]="2" [clrVerticalNavCollapsible]="true" class="nav-trigger--bottom">
       <a clrVerticalNavLink routerLink="" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="user"></clr-icon>
         Bio
