--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
       <router-outlet></router-outlet>
     </div>
     <clr-vertical-nav [clr-nav-level]="2" [clrVerticalNavCollapsible]="true" class="nav-trigger--bottom">
-      <a clrVerticalNavLink routerLink="" routerLinkActive="active">
+      <a clrVerticalNavLink routerLink="bio" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="user"></clr-icon>
         Bio
       </a>
