feat(contact): Add contact information

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
         <clr-icon clrVerticalNavIcon shape="file"></clr-icon>
         Resume
       </a>
-      <a clrVerticalNavLink routerLink="">
+      <a clrVerticalNavLink routerLink="contact" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="talk-bubbles"></clr-icon>
         Contact
       </a>
