feat(resume): Add resume page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
         <clr-icon clrVerticalNavIcon shape="user"></clr-icon>
         Bio
       </a>
-      <a clrVerticalNavLink routerLink="">
+      <a clrVerticalNavLink routerLink="resume" routerLinkActive="active">
         <clr-icon clrVerticalNavIcon shape="file"></clr-icon>
         Resume
       </a>
