fix(ui): Fix blurry GitHub logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="header-actions">
       <a href="https://github.com/esuau" rel="noopener noreferrer" target="_blank" class="nav-link nav-icon">
-        <img src="assets/github-light.png" alt="GitHub" />
+        <img src="assets/github-light.png" height="32" width="32" alt="GitHub" />
       </a>
     </div>
   </clr-header>
