feat(encryption): Change PGP key ID

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -25,7 +25,7 @@
           <a
             class="btn btn-outline"
             rel="noopener noreferrer"
-            href="https://keyserver.pgp.com/vkd/DownloadKey.event?keyid=0xA2E4BF362DFE49CB">
+            href="https://keyserver.pgp.com/vkd/DownloadKey.event?keyid={{pgpKeyId}}">
             <clr-icon shape="lock"></clr-icon>
             Download PGP public key
           </a>
