chore(deps): Migrate to Angular 9

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,12 @@
       </a>
     </div>
     <div class="header-actions">
-      <a href="https://github.com/esuau" rel="noopener noreferrer" target="_blank" class="nav-link nav-icon">
+      <a
+        class="nav-link nav-text"
+        href="https://github.com/esuau"
+        rel="noopener noreferrer"
+        target="_blank"
+        aria-label="settings">
         <img src="assets/github-light.png" height="32" width="32" alt="GitHub" />
       </a>
     </div>
