feat(contact): Display email address as plain text

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -20,7 +20,7 @@
             <clr-icon shape="envelope"></clr-icon>
             Show email address
           </button>
-          <a *ngIf="emailVisible" href="mailto:{{emailAddress}}">{{emailAddress}}</a>
+          <span *ngIf="emailVisible">{{emailAddress}}</span>
           <h5>Encryption</h5>
           <a
             class="btn btn-outline"
