--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
-    background-color: slategrey;
-}
-
 main {
     text-align: center;
     color: #666;
@@ -65,6 +61,10 @@ p {
 
 .social-icon.twitter {
     background-image: url(assets/twitter.svg);
+}
+
+.social-icon.github {
+    background-image: url(assets/github.svg);
 }
 
 .button {
