--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ p {
 }
 
 .badge {
-    border: .05rem solid grey;
+    border: .05rem solid #000;
     border-radius: .6rem;
     color: #000;
     line-height: 2em;
@@ -89,7 +89,7 @@ a {
 .card {
     border: .15rem solid lightgrey;
     border-radius: 10px;
-    box-shadow: 10px 10px 5px lightgray;
+    box-shadow: 10px 10px 5px lightgrey;
     margin: auto;
     padding: 2vh;
 }
